Added delete button for deleting rows. Added method for bolding main text via checkbox. Added drag and drop posibility on recyclerView. Added custom divider. Beautified row_layout and added lanscape layout, colors and a theme.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="font_size">Font size</string>
     <string name="text">Text</string>
     <string name="todo">TODO</string>
+    <string name="change_font_size">Change font size</string>
+    <string name="delete">delete</string>
 </resources>
